# WEB_HW_08

./: README.md  connection_mongo.py  consumer.py  main.py  producer.py  pyproject.toml  seed.py
