[tool.poetry]
name = "hw-08"
version = "0.1.0"
description = ""
authors = ["KyryloChalov <ks7977166@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
celery = "^5.3.6"
faker = "^22.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
